--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Basketball Team Signup</title>
   <h1>Create a Basketball Game</h1>
-  
+  <form method="POST" action="/team"
  </head>
  <body>
  </body>
