--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -4,7 +4,14 @@
   <meta charset="UTF-8">
   <title>Basketball Team Signup</title>
   <h1>Create a Basketball Game</h1>
-  <form method="POST" action="/team"
+  <form method="POST" action="/team">
+    <p>Team Name: <input</p>
+    
+    
+    
+    
+    
+  </form>
  </head>
  <body>
  </body>
