--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,7 +5,7 @@
   <title>Basketball Team Signup</title>
   <h1>Create a Basketball Game</h1>
   <form method="POST" action="/team">
-    <p>Team Name: <input</p>
+    <p>Team Name: <input type="text" ></p>
     
     
     
