Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,7 +5,9 @@
   <title>Basketball Team Signup</title>
   <h1>Create a Basketball Game</h1>
   <form method="POST" action="/team">
-    <p>Team Name: <input type="text" ></p>
+    <p>Team Name: <input type="text" name="name"></p>
+    <p>Coach: <input type="text" name="coach"></p>
+    <p>Point Gaurd <input type="" name=""></p>
     
     
     
