Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -8,6 +8,11 @@
     <p>Team Name: <input type="text" name="name"></p>
     <p>Coach: <input type="text" name="coach"></p>
     <p>Point Gaurd <input type="" name=""></p>
+    <p>Shooting Gaurd <input type="" name=""></p>
+    <p>Small Foward <input type="" name=""></p>
+    <p>Power Foward <input type="" name=""></p>
+    <p>Center <input type="" name=""></p>
+    <p><input type="submit" name=""></p>
     
     
     
