--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,12 +7,12 @@
   <form method="POST" action="/team">
     <p>Team Name: <input type="text" name="name"></p>
     <p>Coach: <input type="text" name="coach"></p>
-    <p>Point Gaurd <input type="" name=""></p>
-    <p>Shooting Gaurd <input type="" name=""></p>
-    <p>Small Foward <input type="" name=""></p>
-    <p>Power Foward <input type="" name=""></p>
-    <p>Center <input type="" name=""></p>
-    <p><input type="submit" name=""></p>
+    <p>Point Gaurd <input type="text" name="pg"></p>
+    <p>Shooting Gaurd <input type="text" name="sg"></p>
+    <p>Small Foward <input type="text" name="sf"></p>
+    <p>Power Foward <input type="text" name="pf"></p>
+    <p>Center <input type="text" name="c"></p>
+    <p><input type="submit" value="submit"></p>
     
     
     
