--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -3,23 +3,18 @@
  <head>
   <meta charset="UTF-8">
   <title>Basketball Team Signup</title>
-  <h1>Create a Basketball Game</h1>
-  <form method="POST" action="/team">
-   
-    <p>Team Name: <input type="text" name="name"></p>
-    <p>Coach: <input type="text" name="coach"></p>
-    <p>Point Gaurd <input type="text" name="pg"></p>
-    <p>Shooting Gaurd <input type="text" name="sg"></p>
-    <p>Small Foward <input type="text" name="sf"></p>
-    <p>Power Foward <input type="text" name="pf"></p>
-    <p>Center <input type="text" name="c"></p>
-    <p><input type="submit" value="submit"></p>
-    
-    
-    </form>
  </head>
  <body>
+    <h1>Create a Basketball Team!</h1>
+    <form method="POST" action="/team">
+        <p>Team Name: <input type="text" name="name"></p>
+        <p>Coach <input type="text" name="coach"></p>
+        <p>Point Guard: <input type="text" name="pg"></p>
+        <p>Shooting Guard: <input type="text" name="sg"></p>
+        <p>Small Forward: <input type="text" name="sf"></p>
+        <p>Power Forward: <input type="text" name="pf"></p>
+        <p>Center: <input type="text" name="c"></p>
+        <input type="submit" id="signup" value="Submit">
+    </form>
  </body>
 </html>
-
-
